[gd_scene load_steps=48 format=2]

[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Idle (32x32).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Fall (32x32).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Jump (32x32).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Wall Jump (32x32).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Main Characters/Ninja Frog/Hit (32x32).png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "wall",
"speed": 20.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 9, 12 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 1, 12 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "hit"
frame = 6
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 13 )

[node name="RCollider" type="Area2D" parent="."]
position = Vector2( -1, 0 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RCollider"]
position = Vector2( 10, 4 )
shape = SubResource( 14 )

[node name="LCollider" type="Area2D" parent="."]
position = Vector2( -19, 0 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LCollider"]
position = Vector2( 10, 4 )
shape = SubResource( 14 )
[connection signal="body_entered" from="RCollider" to="." method="_on_RCollider_body_entered"]
[connection signal="body_exited" from="RCollider" to="." method="_on_RCollider_body_exited"]
[connection signal="body_entered" from="LCollider" to="." method="_on_LCollider_body_entered"]
[connection signal="body_exited" from="LCollider" to="." method="_on_LCollider_body_exited"]
